Changed the logic of the color palette

--- a/app/src/main/res/drawable/button_background_1_9.xml
+++ b/app/src/main/res/drawable/button_background_1_9.xml
@@ -2,8 +2,8 @@
 
     <corners android:radius="5dp" />
     <gradient
-        android:startColor="#de8c09"
-        android:endColor="#de8c09"
+        android:startColor="@color/colorForButtons"
+        android:endColor="@color/colorForButtons"
         android:angle="-90"/>
 
 
