--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#f3d945</color>
+    <color name="colorPrimary">#444B6E</color>
     <color name="colorPrimaryDarkGradient">#757575</color>
-    <color name="colorPrimaryDark">#f3d945</color>
-    <color name="colorAccent">#de8c09</color>
+    <color name="colorPrimaryDark">#444B6E</color>
+    <color name="colorAccent">#B4CDED</color>
     <color name="textColor">#000000</color>
     <color name="selected">#87BCDE</color>
+    <color name="colorForButtons">#FCF5C7</color>
+    <color name="colorListEntry">#B4CDED</color>
 </resources>
