Developing a ColorManager, an settings activity from which you can set any theme for the app

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,13 @@
         android:layout_marginTop="30sp"
         android:text="Test" />
 
+    <Button
+        android:id="@+id/settingsButton"
+        android:layout_width="169dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30sp"
+        android:layout_marginTop="30sp"
+        android:text="Settings" />
 
 
 </LinearLayout>
