--- a/app/src/main/res/layout/activity_add_spending.xml
+++ b/app/src/main/res/layout/activity_add_spending.xml
@@ -30,6 +30,7 @@
                 android:background="@drawable/button_background_1_9"
                 android:onClick="buttonPressed"
                 android:text="1"
+                android:textColor="@color/textColor"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,6 +43,7 @@
                 android:background="@drawable/button_background_1_9"
                 android:onClick="buttonPressed"
                 android:text="2"
+                android:textColor="@color/textColor"
                 app:layout_constraintStart_toEndOf="@+id/button1"
                 app:layout_constraintTop_toTopOf="@+id/button1" />
 
@@ -53,6 +55,7 @@
                 android:background="@drawable/button_background_1_9"
                 android:onClick="buttonPressed"
                 android:text="3"
+                android:textColor="@color/textColor"
                 app:layout_constraintStart_toEndOf="@+id/button2"
                 app:layout_constraintTop_toTopOf="@+id/button2" />
 
@@ -64,6 +67,7 @@
                 android:background="@drawable/button_background_1_9"
                 android:onClick="buttonPressed"
                 android:text="4"
+                android:textColor="@color/textColor"
                 app:layout_constraintStart_toStartOf="@+id/button1"
                 app:layout_constraintTop_toBottomOf="@+id/button3" />
 
@@ -76,6 +80,7 @@
                 android:background="@drawable/button_background_1_9"
                 android:onClick="buttonPressed"
                 android:text="5"
+                android:textColor="@color/textColor"
                 app:layout_constraintStart_toEndOf="@+id/button4"
                 app:layout_constraintTop_toBottomOf="@+id/button1" />
 
@@ -88,6 +93,7 @@
                 android:background="@drawable/button_background_1_9"
                 android:onClick="buttonPressed"
                 android:text="6"
+                android:textColor="@color/textColor"
                 app:layout_constraintStart_toEndOf="@+id/button5"
                 app:layout_constraintTop_toBottomOf="@+id/button2" />
 
@@ -99,6 +105,7 @@
                 android:background="@drawable/button_background_1_9"
                 android:onClick="buttonPressed"
                 android:text="7"
+                android:textColor="@color/textColor"
                 app:layout_constraintStart_toStartOf="@+id/button4"
                 app:layout_constraintTop_toBottomOf="@+id/button4" />
 
@@ -111,6 +118,7 @@
                 android:background="@drawable/button_background_1_9"
                 android:onClick="buttonPressed"
                 android:text="8"
+                android:textColor="@color/textColor"
                 app:layout_constraintStart_toEndOf="@+id/button7"
                 app:layout_constraintTop_toBottomOf="@+id/button4" />
 
@@ -123,6 +131,7 @@
                 android:background="@drawable/button_background_1_9"
                 android:onClick="buttonPressed"
                 android:text="9"
+                android:textColor="@color/textColor"
                 app:layout_constraintStart_toEndOf="@+id/button8"
                 app:layout_constraintTop_toBottomOf="@+id/button5" />
 
@@ -135,6 +144,7 @@
                 android:background="@drawable/button_background_1_9"
                 android:onClick="buttonPressed"
                 android:text="0"
+                android:textColor="@color/textColor"
                 app:layout_constraintStart_toEndOf="@+id/button7"
                 app:layout_constraintTop_toBottomOf="@+id/button8" />
 
@@ -146,6 +156,7 @@
                 android:layout_marginTop="2dp"
                 android:background="@drawable/button_background_1_9"
                 android:text=""
+                android:textColor="@color/textColor"
                 app:layout_constraintStart_toEndOf="@+id/button0"
                 app:layout_constraintTop_toBottomOf="@+id/button9" />
 
