--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#444B6E</color>
+    <color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDarkGradient">#757575</color>
-    <color name="colorPrimaryDark">#444B6E</color>
-    <color name="colorAccent">#B4CDED</color>
-    <color name="textColor">#000000</color>
-    <color name="selected">#87BCDE</color>
-    <color name="colorForButtons">#FCF5C7</color>
-    <color name="colorListEntry">#B4CDED</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#000000</color>
+    <color name="textColor">#FFFFFF</color>
+    <color name="selected">#FFFFFF</color>
+    <color name="colorForButtons">#FF9200</color>
+    <color name="colorListEntry">#FF9200</color>
 </resources>
