--- a/app/src/main/res/layout/activity_spender.xml
+++ b/app/src/main/res/layout/activity_spender.xml
@@ -9,16 +9,26 @@
 
     <com.example.dayplanner.DynamicListView
         android:id="@+id/listView"
-        android:layout_width="380dp"
-        android:layout_height="600dp"
+        style="@style/PercentageStyle"
+        app:layout_constraintWidth_percent="0.9"
+        app:layout_constraintHeight_percent="0.73"
         android:layout_marginTop="52dp"
         android:background="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.548"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/budgetNameTextView">
 
     </com.example.dayplanner.DynamicListView>
+
+    <ImageView
+        android:id="@+id/side_bars_spender"
+        style="@style/PercentageStyle"
+        app:layout_constraintWidth_percent="0.9"
+        app:layout_constraintHeight_percent="0.73"
+        app:layout_constraintStart_toStartOf="@+id/listView"
+        app:layout_constraintTop_toTopOf="@+id/listView"
+        app:srcCompat="@drawable/side_bars"
+        android:alpha="0"/>
 
     <Button
         android:id="@+id/addBtn"
@@ -32,17 +42,8 @@
         android:textColor="@color/textColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageView
-        android:id="@+id/side_bars_spender"
-        android:layout_width="380dp"
-        android:layout_height="600dp"
-        app:layout_constraintStart_toStartOf="@+id/listView"
-        app:layout_constraintTop_toTopOf="@+id/listView"
-        app:srcCompat="@drawable/side_bars"
-        android:alpha="0"/>
 
     <TextView
         android:id="@+id/totalTextView"
@@ -58,7 +59,8 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="180dp"
+        style="@style/PercentageStyleWidth"
+        app:layout_constraintWidth_percent="0.4"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Name"
@@ -69,7 +71,8 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="110dp"
+        style="@style/PercentageStyleWidth"
+        app:layout_constraintWidth_percent="0.3"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Value"
@@ -77,6 +80,20 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/dateTextViewSpender"
         app:layout_constraintTop_toTopOf="@+id/dateTextViewSpender" />
+
+    <TextView
+        android:id="@+id/dateTextViewSpender"
+        style="@style/PercentageStyleWidth"
+        app:layout_constraintWidth_percent="0.2"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:gravity="center"
+        android:text="Date"
+        android:textColor="@color/textColor"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/listView"
+        app:layout_constraintEnd_toEndOf="@+id/listView"
+        app:layout_constraintTop_toBottomOf="@+id/budgetNameTextView" />
 
     <Button
         android:id="@+id/chartButton"
@@ -99,7 +116,6 @@
         android:textColor="@color/textColor"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -116,18 +132,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/budgetNameTextView" />
 
-    <TextView
-        android:id="@+id/dateTextViewSpender"
-        android:layout_width="90dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:gravity="center"
-        android:text="Date"
-        android:textColor="@color/textColor"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/listView"
-        app:layout_constraintEnd_toEndOf="@+id/listView"
-        app:layout_constraintTop_toBottomOf="@+id/budgetNameTextView" />
 
     <Button
         android:id="@+id/generateButton"
