--- a/app/src/main/res/layout/suggestion_adapter.xml
+++ b/app/src/main/res/layout/suggestion_adapter.xml
@@ -1,29 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/sugggestionRelativeLayout">
 
     <TextView
         android:id="@+id/suggestionTextView"
-        style="@android:style/Widget.DeviceDefault.Light.TextView"
-        android:layout_width="170dp"
+        style="@style/PercentageStyleWidth"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="TextView"
         android:textColor="@color/textColor"
         android:textSize="20sp"
-        android:textStyle="normal" />
+        android:textStyle="normal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.75" />
 
     <TextView
         android:id="@+id/usageTextView"
-        android:layout_width="30dp"
+        style="@style/PercentageStyleWidth"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/suggestionTextView"
+        android:layout_alignParentEnd="true"
         android:layout_toRightOf="@+id/suggestionTextView"
         android:gravity="center"
         android:text="5"
         android:textColor="@color/textColor"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/suggestionTextView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.25" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
