--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,4 +24,21 @@
        <!--<item name="android:activityCloseEnterAnimation">@anim/slide_in_left</item>-->
         <item name="android:activityCloseExitAnimation">@anim/slide_out_right</item>
     </style>
+
+    <style name="PercentageStyle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="layout_constraintWidth_default">percent</item>
+        <item name="layout_constraintHeight_default">percent</item>
+    </style>
+
+    <style name="PercentageStyleHeight">
+        <item name="android:layout_height">0dp</item>
+        <item name="layout_constraintHeight_default">percent</item>
+    </style>
+
+    <style name="PercentageStyleWidth">
+        <item name="android:layout_width">0dp</item>
+        <item name="layout_constraintWidth_default">percent</item>
+    </style>
 </resources>
