--- a/app/src/main/res/layout/activity_add_spending.xml
+++ b/app/src/main/res/layout/activity_add_spending.xml
@@ -12,8 +12,9 @@
         android:id="@+id/constraintLayout3"
         style="@style/PercentageStyleHeight"
         android:layout_width="match_parent"
-        app:layout_constraintHeight_percent="0.1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.1"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -42,8 +43,7 @@
 
         <Button
             android:id="@+id/button1"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            style="@style/NumPadButtons"
             android:layout_marginTop="2dp"
             android:background="@drawable/button_background_1_9"
             android:onClick="buttonPressed"
@@ -55,32 +55,28 @@
 
         <Button
             android:id="@+id/button2"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="2dp"
+            style="@style/NumPadButtons"
             android:background="@drawable/button_background_1_9"
             android:onClick="buttonPressed"
             android:text="2"
             android:textColor="@color/textColor"
+            app:layout_constraintEnd_toStartOf="@+id/button3"
             app:layout_constraintStart_toEndOf="@+id/button1"
             app:layout_constraintTop_toTopOf="@+id/button1" />
 
         <Button
             android:id="@+id/button3"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="2dp"
+            style="@style/NumPadButtons"
             android:background="@drawable/button_background_1_9"
             android:onClick="buttonPressed"
             android:text="3"
             android:textColor="@color/textColor"
-            app:layout_constraintStart_toEndOf="@+id/button2"
+            app:layout_constraintEnd_toEndOf="@+id/totalTextView"
             app:layout_constraintTop_toTopOf="@+id/button2" />
 
         <Button
             android:id="@+id/button4"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            style="@style/NumPadButtons"
             android:layout_marginTop="2dp"
             android:background="@drawable/button_background_1_9"
             android:onClick="buttonPressed"
@@ -91,34 +87,30 @@
 
         <Button
             android:id="@+id/button5"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="2dp"
+            style="@style/NumPadButtons"
             android:layout_marginTop="2dp"
             android:background="@drawable/button_background_1_9"
             android:onClick="buttonPressed"
             android:text="5"
             android:textColor="@color/textColor"
+            app:layout_constraintEnd_toStartOf="@+id/button6"
             app:layout_constraintStart_toEndOf="@+id/button4"
             app:layout_constraintTop_toBottomOf="@+id/button1" />
 
         <Button
             android:id="@+id/button6"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="2dp"
+            style="@style/NumPadButtons"
             android:layout_marginTop="2dp"
             android:background="@drawable/button_background_1_9"
             android:onClick="buttonPressed"
             android:text="6"
             android:textColor="@color/textColor"
-            app:layout_constraintStart_toEndOf="@+id/button5"
+            app:layout_constraintEnd_toEndOf="@+id/button3"
             app:layout_constraintTop_toBottomOf="@+id/button2" />
 
         <Button
             android:id="@+id/button7"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            style="@style/NumPadButtons"
             android:layout_marginTop="2dp"
             android:background="@drawable/button_background_1_9"
             android:onClick="buttonPressed"
@@ -129,71 +121,66 @@
 
         <Button
             android:id="@+id/button8"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="2dp"
+            style="@style/NumPadButtons"
             android:layout_marginTop="2dp"
             android:background="@drawable/button_background_1_9"
             android:onClick="buttonPressed"
             android:text="8"
             android:textColor="@color/textColor"
+            app:layout_constraintEnd_toStartOf="@+id/button9"
             app:layout_constraintStart_toEndOf="@+id/button7"
             app:layout_constraintTop_toBottomOf="@+id/button4" />
 
         <Button
             android:id="@+id/button9"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="2dp"
+            style="@style/NumPadButtons"
             android:layout_marginTop="2dp"
             android:background="@drawable/button_background_1_9"
             android:onClick="buttonPressed"
             android:text="9"
             android:textColor="@color/textColor"
-            app:layout_constraintStart_toEndOf="@+id/button8"
+            app:layout_constraintEnd_toEndOf="@+id/button6"
             app:layout_constraintTop_toBottomOf="@+id/button5" />
 
         <Button
             android:id="@+id/button0"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="2dp"
+            style="@style/NumPadButtons"
             android:layout_marginTop="2dp"
             android:background="@drawable/button_background_1_9"
             android:onClick="buttonPressed"
             android:text="0"
             android:textColor="@color/textColor"
-            app:layout_constraintStart_toEndOf="@+id/button7"
+            app:layout_constraintEnd_toEndOf="@+id/button8"
+            app:layout_constraintStart_toStartOf="@+id/button8"
             app:layout_constraintTop_toBottomOf="@+id/button8" />
 
         <Button
             android:id="@+id/buttonB"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="2dp"
+            style="@style/NumPadButtons"
             android:layout_marginTop="2dp"
             android:background="@drawable/button_background_1_9"
             android:text=""
             android:textColor="@color/textColor"
-            app:layout_constraintStart_toEndOf="@+id/button0"
+            app:layout_constraintEnd_toEndOf="@+id/button9"
             app:layout_constraintTop_toBottomOf="@+id/button9" />
 
 
         <Button
             android:id="@+id/expenceBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/PercentageStyleHeight"
+            app:layout_constraintHeight_percent="0.09"
             android:layout_marginBottom="16dp"
             android:background="@drawable/total_total_background"
             android:text="Expence"
             android:textColor="@color/textColor"
             app:layout_constraintBottom_toTopOf="@+id/incomeBtn"
-            app:layout_constraintEnd_toEndOf="@+id/button9"
-            app:layout_constraintStart_toStartOf="@+id/button7" />
+            app:layout_constraintEnd_toEndOf="@+id/incomeBtn"
+            app:layout_constraintStart_toStartOf="@+id/incomeBtn" />
 
         <TextView
             android:id="@+id/totalTextView"
-            android:layout_width="148dp"
+            android:layout_width="160dp"
             android:layout_height="30dp"
             android:background="@drawable/total_total_background"
             android:gravity="center"
@@ -205,13 +192,15 @@
 
         <Button
             android:id="@+id/incomeBtn"
+            style="@style/PercentageStyleHeight"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:background="@drawable/total_total_background"
             android:text="INCOME"
             android:textColor="@color/textColor"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/expenceBtn" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.09"
+            app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ListView
@@ -287,7 +276,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:gravity="center|center_vertical"
-                android:hint="New source"
+                android:hint="New source name"
                 android:inputType="textPersonName"
                 android:textColor="@color/textColor"
                 android:textColorHint="@color/textColor"
@@ -295,11 +284,11 @@
                 app:layout_constraintBottom_toTopOf="@+id/newSourceBtn"
                 app:layout_constraintEnd_toEndOf="@+id/newSourceBtn"
                 app:layout_constraintStart_toStartOf="@+id/newSourceBtn"
-                app:layout_constraintWidth_percent="0.45" />
+                app:layout_constraintWidth_percent="0.7" />
 
             <Button
                 android:id="@+id/newSourceBtn"
-                android:layout_width="wrap_content"
+                style="@style/PercentageStyleWidth"
                 android:layout_height="wrap_content"
                 android:background="@drawable/total_total_background"
                 android:paddingLeft="5dp"
@@ -308,7 +297,8 @@
                 android:textColor="@color/textColor"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintWidth_percent="0.7"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -317,10 +307,11 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:ems="10"
-            android:hint="Other Details"
+            android:hint="Enter details here"
             android:inputType="text|textCapSentences"
             android:textColor="@color/textColor"
             android:textColorHint="@color/textColor"
+            android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
