--- a/app/src/main/res/layout/activity_select_database_spender.xml
+++ b/app/src/main/res/layout/activity_select_database_spender.xml
@@ -7,123 +7,159 @@
     android:background="@drawable/background_gradient"
     android:fitsSystemWindows="true">
 
-    <ImageView
-        android:id="@+id/side_bars_database_select"
-        style="@style/PercentageStyle"
-        app:layout_constraintWidth_percent="0.9"
-        app:layout_constraintHeight_percent="0.65"
-        android:alpha="0"
-        android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="@+id/dbNamesList"
-        app:layout_constraintStart_toStartOf="@+id/dbNamesList"
-        app:layout_constraintTop_toTopOf="@+id/dbNamesList"
-        app:srcCompat="@drawable/side_bars" />
-
-    <Button
-        android:id="@+id/chartButtonSpender"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/total_total_background"
-        android:text="Chart"
-        android:textColor="@color/textColor"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout3"
+        style="@style/PercentageStyleHeight"
+        android:layout_width="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/budgetsTextView"
-        app:layout_constraintTop_toTopOf="@+id/budgetsTextView" />
-
-    <com.example.dayplanner.DynamicListView
-        android:id="@+id/dbNamesList"
-        style="@style/PercentageStyle"
-        app:layout_constraintWidth_percent="0.9"
-        app:layout_constraintHeight_percent="0.65"
-        android:layout_marginTop="48dp"
-        android:background="@android:color/transparent"
-        android:divider="@null"
-        android:dividerHeight="0dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.1"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/budgetsTextView" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <EditText
-        android:id="@+id/newDbNameeditText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:ems="10"
-        android:gravity="center"
+        <TextView
+            android:id="@+id/budgetsTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Budgets"
+            android:textColor="@color/textColor"
+            android:textSize="30sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        android:hint="Budget name"
-        android:inputType="textPersonName"
-        android:textColor="@color/textColor"
-        android:textColorHint="@color/textColor"
-        app:layout_constraintBottom_toTopOf="@+id/addNewDbButton"
+        <Button
+            android:id="@+id/chartButtonSpender"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/total_total_background"
+            android:text="Chart"
+            android:textColor="@color/textColor"
+            app:layout_constraintBottom_toBottomOf="@+id/budgetsTextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/budgetsTextView"
+            app:layout_constraintTop_toTopOf="@+id/budgetsTextView" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
+        style="@style/PercentageStyleHeight"
+        android:layout_width="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/side_bars_database_select" />
+        app:layout_constraintHeight_percent="0.7"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">
 
-    <Button
-        android:id="@+id/addNewDbButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/total_total_background"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:text="New Budget"
-        android:textColor="@color/textColor"
+        <TextView
+            android:id="@+id/nameTextViewDbSelector"
+            style="@style/PercentageStyle"
+            android:gravity="center"
+            android:text="Name"
+            android:textColor="@color/textColor"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.5"
+            app:layout_constraintHeight_percent="0.06"/>
+
+        <TextView
+            android:id="@+id/valueTextViewDbSelector"
+            style="@style/PercentageStyle"
+            android:gravity="center"
+            android:text="Amount"
+            android:textColor="@color/textColor"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.5"
+            app:layout_constraintHeight_percent="0.06"/>
+
+        <ImageView
+            android:id="@+id/side_bars_database_select"
+            style="@style/PercentageStyleHeight"
+            android:layout_width="match_parent"
+            android:alpha="0"
+            android:scaleType="fitXY"
+            app:layout_constraintBottom_toBottomOf="@+id/dbNamesList"
+            app:layout_constraintStart_toStartOf="@+id/dbNamesList"
+            app:layout_constraintTop_toTopOf="@+id/dbNamesList"
+            app:layout_constraintEnd_toEndOf="@+id/dbNamesList"
+            app:layout_constraintHeight_percent="0.94"
+            app:srcCompat="@drawable/side_bars" />
+
+        <com.example.dayplanner.DynamicListView
+            android:id="@+id/dbNamesList"
+            style="@style/PercentageStyleHeight"
+            android:layout_width="match_parent"
+            android:background="@android:color/transparent"
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHeight_percent="0.94" >
+
+
+        </com.example.dayplanner.DynamicListView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        style="@style/PercentageStyleHeight"
+        android:layout_width="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/side_bars_database_select" />
+        app:layout_constraintHeight_percent="0.2"
+        app:layout_constraintStart_toStartOf="parent">
 
-    <TextView
-        android:id="@+id/totalSelectDbTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Total:"
-        android:textColor="@color/textColor"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addNewDbButton" />
+        <EditText
+            android:id="@+id/newDbNameeditText"
+            android:layout_width="wrap_content"
+            style="@style/PercentageStyleHeight"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:ems="10"
+            android:gravity="center"
+            android:hint="New budget name"
+            android:inputType="textPersonName"
+            android:textColor="@color/textColor"
+            android:textColorHint="@color/textColor"
+            app:layout_constraintBottom_toTopOf="@+id/addNewDbButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHeight_percent="0.4"/>
 
-    <TextView
-        android:id="@+id/budgetsTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        <Button
+            android:id="@+id/addNewDbButton"
+            android:layout_width="wrap_content"
+            style="@style/PercentageStyleHeight"
+            android:background="@drawable/total_total_background"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="New Budget"
+            android:textColor="@color/textColor"
+            app:layout_constraintBottom_toTopOf="@+id/totalSelectDbTextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHeight_percent="0.3"/>
 
+        <TextView
+            android:id="@+id/totalSelectDbTextView"
+            style="@style/PercentageStyleHeight"
+            android:layout_width="0dp"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:text="Total:"
+            android:textSize="20sp"
+            android:textColor="@color/textColor"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHeight_percent="0.3"/>
 
-        android:text="Budgets"
-        android:textColor="@color/textColor"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="@+id/dbNamesList"
-        app:layout_constraintStart_toStartOf="@+id/dbNamesList"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/nameTextViewDbSelector"
-        style="@style/PercentageStyleWidth"
-        app:layout_constraintWidth_percent="0.45"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Name"
-        android:textColor="@color/textColor"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/dbNamesList"
-        app:layout_constraintStart_toStartOf="@+id/dbNamesList" />
-
-    <TextView
-        android:id="@+id/valueTextViewDbSelector"
-        style="@style/PercentageStyleWidth"
-        app:layout_constraintWidth_percent="0.45"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Amount"
-        android:textColor="@color/textColor"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/dbNamesList"
-        app:layout_constraintEnd_toEndOf="@+id/dbNamesList" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
