--- a/app/src/main/res/layout/activity_spender.xml
+++ b/app/src/main/res/layout/activity_spender.xml
@@ -123,7 +123,7 @@
         android:id="@+id/sortDateCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:buttonTint="@color/colorAccent"
+        android:buttonTint="@color/colorForButtons"
         android:text="Sort by date"
         android:textColor="@color/textColor"
         android:textSize="10sp"
@@ -139,6 +139,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="17dp"
         android:layout_marginBottom="50dp"
+        android:textColor="@color/textColor"
         android:background="@drawable/total_total_background"
         android:text="Generate"
         app:layout_constraintBottom_toBottomOf="parent"
