Made so that the spendings list is at the bottom when you open the activity.

--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -1,7 +1,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
+
     <corners android:radius="5dp" />
     <gradient
-        android:startColor="@color/colorForButtons"
-        android:endColor="@color/colorForButtons"
+        android:startColor="@color/colorForWidgets"
+        android:endColor="@color/colorForWidgets"
         android:angle="-90"/>
+
+
+
 </shape>
