--- a/app/src/main/res/drawable/gradient_background_buttons_secundary.xml
+++ b/app/src/main/res/drawable/gradient_background_buttons_secundary.xml
@@ -1,11 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-
     <corners android:radius="5dp" />
     <gradient
-        android:startColor="@color/colorForButtons"
-        android:endColor="@color/colorForButtons"
+        android:startColor="@color/colorForButtonsSecundary"
+        android:endColor="@color/colorForButtonsGradientSecundary"
         android:angle="-90"/>
-
-
-
 </shape>
