--- a/app/src/main/res/layout/activity_add_spending.xml
+++ b/app/src/main/res/layout/activity_add_spending.xml
@@ -41,177 +41,245 @@
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
         app:layout_constraintWidth_percent="0.45">
 
-        <Button
-            android:id="@+id/button1"
-            style="@style/NumPadButtons"
-            android:layout_marginTop="2dp"
-            android:background="@drawable/gradient_background_buttons"
-            android:onClick="buttonPressed"
-            android:text="1"
-            android:textColor="@color/textColor"
-            app:layout_constraintStart_toStartOf="@+id/totalTextView"
-            app:layout_constraintTop_toBottomOf="@+id/totalTextView" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout4"
+            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:maxWidth="400dp"
+            android:maxHeight="400dp"
+            app:layout_constraintDimensionRatio="1:1.25"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:orientation="horizontal">
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.25">
+
+                    <Button
+                        android:id="@+id/button1"
+                        style="@style/NumPadButtons"
+                        android:background="@drawable/gradient_background_buttons"
+                        android:onClick="buttonPressed"
+                        android:text="1"
+                        android:textColor="@color/textColor" />
+
+                    <Button
+                        android:id="@+id/button2"
+                        style="@style/NumPadButtons"
+                        android:background="@drawable/gradient_background_buttons"
+                        android:onClick="buttonPressed"
+                        android:text="2"
+                        android:textColor="@color/textColor" />
+
+                    <Button
+                        android:id="@+id/button3"
+                        style="@style/NumPadButtons"
+                        android:background="@drawable/gradient_background_buttons"
+                        android:onClick="buttonPressed"
+                        android:text="3"
+                        android:textColor="@color/textColor" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.25">
+
+                    <Button
+                        android:id="@+id/button4"
+                        style="@style/NumPadButtons"
+                        android:background="@drawable/gradient_background_buttons"
+                        android:onClick="buttonPressed"
+                        android:text="4"
+                        android:textColor="@color/textColor" />
+
+                    <Button
+                        android:id="@+id/button5"
+                        style="@style/NumPadButtons"
+                        android:background="@drawable/gradient_background_buttons"
+                        android:onClick="buttonPressed"
+                        android:text="5"
+                        android:textColor="@color/textColor" />
+
+                    <Button
+                        android:id="@+id/button6"
+                        style="@style/NumPadButtons"
+                        android:background="@drawable/gradient_background_buttons"
+                        android:onClick="buttonPressed"
+                        android:text="6"
+                        android:textColor="@color/textColor" />
+
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.25">
+
+                    <Button
+                        android:id="@+id/button7"
+                        style="@style/NumPadButtons"
+                        android:background="@drawable/gradient_background_buttons"
+                        android:onClick="buttonPressed"
+                        android:text="7"
+                        android:textColor="@color/textColor" />
+
+                    <Button
+                        android:id="@+id/button8"
+                        style="@style/NumPadButtons"
+                        android:background="@drawable/gradient_background_buttons"
+                        android:onClick="buttonPressed"
+                        android:text="8"
+                        android:textColor="@color/textColor" />
+
+                    <Button
+                        android:id="@+id/button9"
+                        style="@style/NumPadButtons"
+                        android:background="@drawable/gradient_background_buttons"
+                        android:onClick="buttonPressed"
+                        android:text="9"
+                        android:textColor="@color/textColor" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.25">
+
+                    <Button
+                        style="@style/NumPadButtons"
+                        android:background="@drawable/gradient_background_buttons"
+                        android:text="no"
+                        android:textColor="@color/textColor"
+                        android:visibility="invisible"/>
+                    <Button
+                        android:id="@+id/button0"
+                        style="@style/NumPadButtons"
+                        android:background="@drawable/gradient_background_buttons"
+                        android:onClick="buttonPressed"
+                        android:text="0"
+                        android:textColor="@color/textColor" />
+
+                    <Button
+                        android:id="@+id/buttonB"
+                        style="@style/NumPadButtons"
+                        android:background="@drawable/gradient_background_buttons"
+                        android:text=""
+                        android:textColor="@color/textColor" />
+                </TableRow>
+            </TableLayout>
 
 
-        <Button
-            android:id="@+id/button2"
-            style="@style/NumPadButtons"
-            android:background="@drawable/gradient_background_buttons"
-            android:onClick="buttonPressed"
-            android:text="2"
-            android:textColor="@color/textColor"
-            app:layout_constraintEnd_toStartOf="@+id/button3"
-            app:layout_constraintStart_toEndOf="@+id/button1"
-            app:layout_constraintTop_toTopOf="@+id/button1" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <Button
-            android:id="@+id/button3"
-            style="@style/NumPadButtons"
-            android:background="@drawable/gradient_background_buttons"
-            android:onClick="buttonPressed"
-            android:text="3"
-            android:textColor="@color/textColor"
-            app:layout_constraintEnd_toEndOf="@+id/totalTextView"
-            app:layout_constraintTop_toTopOf="@+id/button2" />
-
-        <Button
-            android:id="@+id/button4"
-            style="@style/NumPadButtons"
-            android:layout_marginTop="2dp"
-            android:background="@drawable/gradient_background_buttons"
-            android:onClick="buttonPressed"
-            android:text="4"
-            android:textColor="@color/textColor"
-            app:layout_constraintStart_toStartOf="@+id/button1"
-            app:layout_constraintTop_toBottomOf="@+id/button3" />
-
-        <Button
-            android:id="@+id/button5"
-            style="@style/NumPadButtons"
-            android:layout_marginTop="2dp"
-            android:background="@drawable/gradient_background_buttons"
-            android:onClick="buttonPressed"
-            android:text="5"
-            android:textColor="@color/textColor"
-            app:layout_constraintEnd_toStartOf="@+id/button6"
-            app:layout_constraintStart_toEndOf="@+id/button4"
-            app:layout_constraintTop_toBottomOf="@+id/button1" />
-
-        <Button
-            android:id="@+id/button6"
-            style="@style/NumPadButtons"
-            android:layout_marginTop="2dp"
-            android:background="@drawable/gradient_background_buttons"
-            android:onClick="buttonPressed"
-            android:text="6"
-            android:textColor="@color/textColor"
-            app:layout_constraintEnd_toEndOf="@+id/button3"
-            app:layout_constraintTop_toBottomOf="@+id/button2" />
-
-        <Button
-            android:id="@+id/button7"
-            style="@style/NumPadButtons"
-            android:layout_marginTop="2dp"
-            android:background="@drawable/gradient_background_buttons"
-            android:onClick="buttonPressed"
-            android:text="7"
-            android:textColor="@color/textColor"
-            app:layout_constraintStart_toStartOf="@+id/button4"
-            app:layout_constraintTop_toBottomOf="@+id/button4" />
-
-        <Button
-            android:id="@+id/button8"
-            style="@style/NumPadButtons"
-            android:layout_marginTop="2dp"
-            android:background="@drawable/gradient_background_buttons"
-            android:onClick="buttonPressed"
-            android:text="8"
-            android:textColor="@color/textColor"
-            app:layout_constraintEnd_toStartOf="@+id/button9"
-            app:layout_constraintStart_toEndOf="@+id/button7"
-            app:layout_constraintTop_toBottomOf="@+id/button4" />
-
-        <Button
-            android:id="@+id/button9"
-            style="@style/NumPadButtons"
-            android:layout_marginTop="2dp"
-            android:background="@drawable/gradient_background_buttons"
-            android:onClick="buttonPressed"
-            android:text="9"
-            android:textColor="@color/textColor"
-            app:layout_constraintEnd_toEndOf="@+id/button6"
-            app:layout_constraintTop_toBottomOf="@+id/button5" />
-
-        <Button
-            android:id="@+id/button0"
-            style="@style/NumPadButtons"
-            android:layout_marginTop="2dp"
-            android:background="@drawable/gradient_background_buttons"
-            android:onClick="buttonPressed"
-            android:text="0"
-            android:textColor="@color/textColor"
-            app:layout_constraintEnd_toEndOf="@+id/button8"
-            app:layout_constraintStart_toStartOf="@+id/button8"
-            app:layout_constraintTop_toBottomOf="@+id/button8" />
-
-        <Button
-            android:id="@+id/buttonB"
-            style="@style/NumPadButtons"
-            android:layout_marginTop="2dp"
-            android:background="@drawable/gradient_background_buttons"
-            android:text=""
-            android:textColor="@color/textColor"
-            app:layout_constraintEnd_toEndOf="@+id/button9"
-            app:layout_constraintTop_toBottomOf="@+id/button9" />
-
-
-        <Button
-            android:id="@+id/expenceBtn"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
             style="@style/PercentageStyleHeight"
-            app:layout_constraintHeight_percent="0.09"
-            android:layout_marginBottom="16dp"
-            android:background="@drawable/gradient_background_buttons_secundary"
-            android:text="Expence"
-            android:textColor="@color/textColor"
-            app:layout_constraintBottom_toTopOf="@+id/incomeBtn"
-            app:layout_constraintEnd_toEndOf="@+id/incomeBtn"
-            app:layout_constraintStart_toStartOf="@+id/incomeBtn" />
+            android:layout_width="match_parent"
+            app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.2"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/totalTextView"
+            app:layout_constraintVertical_bias="0.8">
+
+            <Button
+                android:id="@+id/expenceBtn"
+                style="@style/PercentageStyleHeight"
+                android:layout_width="wrap_content"
+                android:background="@drawable/gradient_background_buttons_secundary"
+                android:text="Expence"
+                android:textColor="@color/textColor"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHeight_percent="0.4"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/incomeBtn"
+                style="@style/PercentageStyleHeight"
+                android:layout_width="wrap_content"
+                android:background="@drawable/gradient_background_buttons_secundary"
+                android:text="INCOME"
+                android:textColor="@color/textColor"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHeight_percent="0.4"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
             android:id="@+id/totalTextView"
-            android:layout_width="160dp"
-            android:layout_height="30dp"
+            android:layout_width="match_parent"
+            style="@style/PercentageStyleHeight"
+            app:layout_constraintHeight_percent="0.05"
             android:background="@drawable/gradient_background"
             android:gravity="center"
             android:textColor="@color/textColor"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/incomeBtn"
-            style="@style/PercentageStyleHeight"
-            android:layout_width="wrap_content"
-            android:background="@drawable/gradient_background_buttons_secundary"
-            android:text="INCOME"
-            android:textColor="@color/textColor"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.09"
-            app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ListView
-        android:id="@+id/listSuggestions"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout1"
         style="@style/PercentageStyle"
-        android:layout_marginStart="16dp"
-        android:background="@drawable/gradient_background_lists"
-        app:layout_constraintHeight_percent="0.65"
+        android:layout_marginLeft="16dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHeight_percent="0.65"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
-        app:layout_constraintWidth_percent="0.45" />
+        app:layout_constraintWidth_percent="0.45">
+
+        <TextView
+            android:id="@+id/textView5"
+            style="@style/PercentageStyle"
+            android:background="@drawable/gradient_background"
+            android:gravity="right|center_vertical"
+            android:paddingEnd="10dp"
+            android:text="Uses"
+            android:textColor="@color/textColor"
+            android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.05"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.5" />
+
+        <TextView
+            android:id="@+id/textView4"
+            style="@style/PercentageStyle"
+            android:background="@drawable/gradient_background"
+            android:gravity="start|center_vertical"
+            android:paddingStart="10dp"
+            android:text="Sources"
+            android:textColor="@color/textColor"
+            android:textSize="20dp"
+            app:layout_constraintHeight_percent="0.05"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.6" />
+
+        <ListView
+            android:id="@+id/listSuggestions"
+            style="@style/PercentageStyle"
+            android:background="@drawable/gradient_background_lists"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.95"
+            app:layout_constraintStart_toStartOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         style="@style/PercentageStyleHeight"
@@ -249,8 +317,8 @@
                 android:background="@drawable/gradient_background_buttons_secundary"
                 android:gravity="center"
                 android:includeFontPadding="false"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
                 android:text="21/04/20"
                 android:textColor="@color/textColor"
                 android:textSize="20sp"
@@ -289,8 +357,8 @@
                 style="@style/PercentageStyleWidth"
                 android:layout_height="wrap_content"
                 android:background="@drawable/gradient_background_buttons_secundary"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
                 android:text="Add new source"
                 android:textColor="@color/textColor"
                 app:layout_constraintBottom_toBottomOf="parent"
