--- a/app/src/main/res/layout/activity_spender.xml
+++ b/app/src/main/res/layout/activity_spender.xml
@@ -7,140 +7,169 @@
     android:background="@drawable/background_gradient"
     tools:context=".main.MainActivity">
 
-    <com.example.dayplanner.utils.DynamicListView
-        android:id="@+id/listView"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout1"
+        style="@style/PercentageStyleHeight"
+        android:layout_width="match_parent"
+        app:layout_constraintHeight_percent="0.1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <CheckBox
+            android:id="@+id/sortDateCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:buttonTint="@color/colorForButtons"
+            android:text="Sort by date"
+            android:textColor="@color/textColor"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/budgetNameTextView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/budgetNameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Budget name"
+            android:textColor="@color/textColor"
+            android:textSize="30sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/chartButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/gradient_background_buttons"
+            android:text="Chart"
+            android:textColor="@color/textColor"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/budgetNameTextView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         style="@style/PercentageStyle"
-        app:layout_constraintWidth_percent="0.9"
-        app:layout_constraintHeight_percent="0.73"
-        android:layout_marginTop="52dp"
-        android:background="@drawable/gradient_background_lists"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.75"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/budgetNameTextView"/>
+        app:layout_constraintTop_toBottomOf="@id/constraintLayout1"
+        app:layout_constraintWidth_percent="0.9">
 
-    <ImageView
-        android:id="@+id/side_bars_spender"
-        style="@style/PercentageStyle"
-        app:layout_constraintWidth_percent="0.9"
-        app:layout_constraintHeight_percent="0.73"
-        app:layout_constraintStart_toStartOf="@+id/listView"
-        app:layout_constraintTop_toTopOf="@+id/listView"
-        app:srcCompat="@drawable/side_bars"
-        android:alpha="0"/>
+        <TextView
+            android:id="@+id/textView2"
+            style="@style/PercentageStyle"
+            android:gravity="start|center_vertical"
+            android:text="Name"
+            android:textColor="@color/textColor"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.45"
+            app:layout_constraintHeight_percent="0.05"
+            android:paddingStart="10dp"/>
 
-    <Button
-        android:id="@+id/addBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginBottom="48dp"
-        android:background="@drawable/gradient_background_buttons_secundary"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:text="ADD NEW SOURCE"
-        android:textColor="@color/textColor"
+        <TextView
+            android:id="@+id/textView3"
+            style="@style/PercentageStyle"
+            android:gravity="center|center_vertical"
+            android:text="Value"
+            android:textColor="@color/textColor"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toStartOf="@+id/dateTextViewSpender"
+            app:layout_constraintHeight_percent="0.05"
+            app:layout_constraintStart_toEndOf="@+id/textView2"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.3" />
+
+        <TextView
+            android:id="@+id/dateTextViewSpender"
+            style="@style/PercentageStyle"
+            android:gravity="right|center_vertical"
+            android:text="Date"
+            android:textColor="@color/textColor"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.25"
+            app:layout_constraintHeight_percent="0.05"
+            android:paddingEnd="10dp"/>
+
+        <com.example.dayplanner.utils.DynamicListView
+            android:id="@+id/listView"
+            style="@style/PercentageStyleHeight"
+            android:layout_width="match_parent"
+            android:background="@drawable/gradient_background_lists"
+            app:layout_constraintBottom_toBottomOf="@+id/side_bars_spender"
+            app:layout_constraintEnd_toEndOf="@+id/side_bars_spender"
+            app:layout_constraintHeight_percent="0.95"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageView
+            android:id="@+id/side_bars_spender"
+            style="@style/PercentageStyleHeight"
+            android:layout_width="match_parent"
+            android:alpha="0"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.95"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/side_bars" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        style="@style/PercentageStyleHeight"
+        android:layout_width="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHeight_percent="0.15"
+        app:layout_constraintStart_toStartOf="parent">
 
+        <Button
+            android:id="@+id/addBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/gradient_background_buttons_secundary"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:text="ADD NEW SOURCE"
+            android:textColor="@color/textColor"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/totalTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:text="Total:"
-        android:textColor="@color/textColor"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <Button
+            android:id="@+id/generateButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/gradient_background_buttons_secundary"
+            android:text="Generate"
+            android:textColor="@color/textColor"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/addBtn"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView2"
-        style="@style/PercentageStyleWidth"
-        app:layout_constraintWidth_percent="0.4"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Name"
-        android:textColor="@color/textColor"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toTopOf="@+id/dateTextViewSpender" />
+        <TextView
+            android:id="@+id/totalTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total:"
+            android:textColor="@color/textColor"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/addBtn" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <TextView
-        android:id="@+id/textView3"
-        style="@style/PercentageStyleWidth"
-        app:layout_constraintWidth_percent="0.3"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Value"
-        android:textColor="@color/textColor"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/dateTextViewSpender"
-        app:layout_constraintTop_toTopOf="@+id/dateTextViewSpender" />
-
-    <TextView
-        android:id="@+id/dateTextViewSpender"
-        style="@style/PercentageStyleWidth"
-        app:layout_constraintWidth_percent="0.2"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:gravity="center"
-        android:text="Date"
-        android:textColor="@color/textColor"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/listView"
-        app:layout_constraintEnd_toEndOf="@+id/listView"
-        app:layout_constraintTop_toBottomOf="@+id/budgetNameTextView" />
-
-    <Button
-        android:id="@+id/chartButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/gradient_background_buttons"
-        android:text="Chart"
-        android:textColor="@color/textColor"
-        app:layout_constraintBottom_toBottomOf="@+id/budgetNameTextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/budgetNameTextView"
-        app:layout_constraintTop_toTopOf="@+id/budgetNameTextView" />
-
-    <TextView
-        android:id="@+id/budgetNameTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Budget name"
-        android:textColor="@color/textColor"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <CheckBox
-        android:id="@+id/sortDateCheckBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:buttonTint="@color/colorForButtons"
-        android:text="Sort by date"
-        android:textColor="@color/textColor"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/budgetNameTextView"
-        app:layout_constraintEnd_toStartOf="@+id/budgetNameTextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/budgetNameTextView" />
-
-
-    <Button
-        android:id="@+id/generateButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="17dp"
-        android:layout_marginBottom="50dp"
-        android:textColor="@color/textColor"
-        android:background="@drawable/gradient_background_buttons_secundary"
-        android:text="Generate"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
