--- a/app/src/main/res/layout/db_names_adapter.xml
+++ b/app/src/main/res/layout/db_names_adapter.xml
@@ -1,26 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/list_adapter_background">
 
-    <TextView
-        android:id="@+id/nameTextViewDbNames"
-        android:layout_width="189dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center|center_horizontal"
-        android:text="TextView"
-        android:textColor="@color/textColor"
-        android:textSize="30sp" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
-    <TextView
-        android:id="@+id/valueTextViewDbNames"
-        android:layout_width="189dp"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/nameTextViewDbNames"
-        android:layout_toRightOf="@+id/nameTextViewDbNames"
-        android:gravity="center"
-        android:text="TextView"
-        android:textColor="@color/textColor"
-        android:textSize="30sp" />
+        <TextView
+            android:id="@+id/nameTextViewDbNames"
+            style="@style/PercentageStyleWidth"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:gravity="start|center_vertical"
+            android:paddingStart="10dp"
+            android:text="TextView"
+            android:textColor="@color/textColor"
+            android:textSize="30sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.5"/>
+
+        <TextView
+            android:id="@+id/valueTextViewDbNames"
+            style="@style/PercentageStyleWidth"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/nameTextViewDbNames"
+            android:layout_toRightOf="@+id/nameTextViewDbNames"
+            android:gravity="end|center_vertical"
+            android:paddingEnd="10dp"
+            android:text="TextView"
+            android:textColor="@color/textColor"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.5"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </RelativeLayout>
