--- a/app/src/main/res/layout/my_layout_adapter_details.xml
+++ b/app/src/main/res/layout/my_layout_adapter_details.xml
@@ -1,55 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/spendingRelativeLayoutDetailed"
-    android:background="@color/colorPrimaryDark">
+    android:background="@drawable/list_adapter_background">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="180dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_toStartOf="@+id/valueTextView"
-        android:layout_toLeftOf="@+id/valueTextView"
-        android:gravity="center"
-        android:text="Name"
-        android:textColor="@color/textColor"
-        android:textSize="20sp" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true">
 
-    <TextView
-        android:id="@+id/valueTextView"
-        android:layout_width="110dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="90dp"
-        android:gravity="center"
-        android:text="1000000.0"
-        android:textColor="@color/textColor"
-        android:textSize="20sp" />
+        <TextView
+            android:id="@+id/textView"
+            style="@style/PercentageStyleWidth"
+            android:layout_height="wrap_content"
+            android:gravity="start|center_vertical"
+            android:text="Name"
+            android:textColor="@color/textColor"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.45"
+            android:paddingStart="10dp" />
 
+        <TextView
+            android:id="@+id/valueTextView"
+            style="@style/PercentageStyleWidth"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:gravity="center|center_vertical"
+            android:text="1000000.0"
+            android:textColor="@color/textColor"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toStartOf="@+id/dateTextView"
+            app:layout_constraintStart_toEndOf="@+id/textView"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.3" />
 
-    <TextView
-        android:id="@+id/dateTextView"
-        android:layout_width="90dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:gravity="center"
-        android:text='20/04/2'
-        android:textColor="@color/textColor"
-        android:textSize="20sp" />
+        <TextView
+            android:id="@+id/dateTextView"
+            style="@style/PercentageStyleWidth"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:gravity="right|center_vertical"
+            android:text='20/04/2'
+            android:textColor="@color/textColor"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.25"
+            android:paddingEnd="10dp"/>
 
-    <TextView
-        android:id="@+id/detailTextView"
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView"
-        android:layout_alignStart="@+id/textView"
-        android:layout_marginLeft="0dp"
-        android:gravity="center"
-        android:text="Detail"
-        android:textColor="@color/textColor"
-        android:textSize="20sp" />
-
+        <!--<Button
+            android:id="@+id/button"
+            android:layout_width="30dp"
+            android:layout_height="27dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="0dp" />
+        -->
+        <TextView
+            android:id="@+id/detailTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="start|center_vertical"
+            android:paddingStart="10dp"
+            android:text="Detail"
+            android:textColor="@color/textColor"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/valueTextView" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </RelativeLayout>
