--- a/app/src/main/res/layout/suggestion_adapter.xml
+++ b/app/src/main/res/layout/suggestion_adapter.xml
@@ -10,10 +10,10 @@
         android:id="@+id/suggestionTextView"
         style="@style/PercentageStyleWidth"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="TextView"
+        android:gravity="start|center_vertical"
+        android:paddingStart="10dp"
+        android:textSize="20dp"
         android:textColor="@color/textColor"
-        android:textSize="20sp"
         android:textStyle="normal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,11 +25,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:textSize="20dp"
         android:layout_toRightOf="@+id/suggestionTextView"
-        android:gravity="center"
+        android:gravity="right|center_vertical"
+        android:paddingEnd="10dp"
         android:text="5"
         android:textColor="@color/textColor"
-        android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/suggestionTextView"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent="0.25" />
